--- a/Opdracht HTML CSS KoRn/index.html
+++ b/Opdracht HTML CSS KoRn/index.html
@@ -39,7 +39,7 @@
 
       <main>
         <section>
-          <p>
+          <p class="main-text">
             Korn (stylized as KoЯn, or occasionally KoRn) is an American nu
             metal band from Bakersfield, California, formed in 1993. Korn's
             cathartic sound positioned the group as one of the most popular and
@@ -61,15 +61,19 @@
           </p>
         </section>
 
-        <iframe
-          width="300"
-          height="165"
-          src="https://www.youtube.com/embed/wjttaL8y_DA"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <div class="iframe-container">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/wjttaL8y_DA"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <br />
+        <a href="#top" class="button">Back to top</a>
       </main>
 
       <footer>
