--- a/Opdracht HTML CSS KoRn/music.html
+++ b/Opdracht HTML CSS KoRn/music.html
@@ -51,7 +51,7 @@
           <img src="images/theserenityofsuffering12.jpg" class="album-img" />
           <img src="images/thepathoftotality10.jpg" class="album-img" />
           <img src="images/theparadigmshift11.jpg" class="album-img" />
-
+          <img src="images/allmixedup13.jpg" class="album-img" />
           <img src="images/requim14.jpg" class="album-img" id="large2" />
         </div>
 
