changed title nav bar

--- a/Opdracht HTML CSS KoRn/index.html
+++ b/Opdracht HTML CSS KoRn/index.html
@@ -24,7 +24,7 @@
     <div class="index-wrapper">
       <header>
         <div class="navbar">
-          <h1>My Favorite Band</h1>
+          <h1>My All Time Favorite Band</h1>
 
           <nav>
             <ul>
